<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>javageci-parent</name>
    <packaging>pom</packaging>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-parent</artifactId>
    <version>1.6.4-SNAPSHOT</version>
    <description>Java GEnerate Code Inline source code generation framework</description>
    <modules>
        <module>javageci-engine</module>
        <module>javageci-api</module>
        <module>javageci-tools</module>
        <module>javageci-core</module>
        <module>javageci-annotation</module>
        <module>javageci-examples</module>
        <module>javageci-jamal</module>
        <module>javageci-jamal-test</module>
        <module>javageci-core-annotations</module>
        <module>javageci-testengine</module>
    </modules>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Peter Verhas</name>
            <email>peter@verhas.com</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/verhas/javageci.git</connection>
        <developerConnection>scm:git:ssh://github.com/verhas/javageci.git</developerConnection>
        <url>https:/github.com/verhas/javageci/tree/master</url>
    </scm>
    <url>https:/github.com/verhas/javageci/tree/master</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <profile>default</profile>
    </properties>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M4</version>
                    <configuration>
                        <argLine>
                            --add-opens geci.api/javax0.geci.api=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.tools=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.tools.syntax=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.tools.reflection=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.javacomparator=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.lexeger=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.javacomparator.lex=ALL-UNNAMED
                            --add-opens geci.engine/javax0.geci.util=ALL-UNNAMED
                            --add-opens geci.engine/javax0.geci.toolsgen=ALL-UNNAMED
                            --add-opens geci.engine/javax0.geci.engine=ALL-UNNAMED
                            --add-opens geci.core/javax0.geci.fluent.syntax=ALL-UNNAMED
                            --add-opens geci.core/javax0.geci.record=ALL-UNNAMED
                            --add-opens geci.core/javax0.geci.repeated=ALL-UNNAMED
                            --add-opens geci.core/javax0.geci.iterate=ALL-UNNAMED
                            --add-opens geci.core/javax0.geci.jdocify=ALL-UNNAMED
                            --add-opens geci.core/javax0.geci.mapper=ALL-UNNAMED
                            --add-opens geci.core/javax0.geci=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tutorials.simple=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tutorials.hello=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tutorials.hello=geci.tools
                            --add-opens geci.examples/javax0.geci.buildfluent=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.consistency=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.templated=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.repeated=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.mapper=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.builder=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.test.tools.lexeger=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.builder=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.cloner=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.configBuilder=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.record=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.accessor=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.equals=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.jamal.test.tools.lexeger=ALL-UNNAMED
                            --add-exports geci.examples/javax0.geci.tests.fluent=geci.tools
                            --add-exports geci.examples/javax0.geci.tutorials.simple=geci.core
                            --add-exports geci.examples/javax0.geci.tests.fluent=geci.core
                            --add-exports geci.examples/javax0.geci.buildfluent=geci.core
                            --add-exports geci.examples/javax0.geci.geci.jamal.reflection=ALL-UNNAMED
                            --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
                            --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                        </argLine>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.junit.jupiter</groupId>
                            <artifactId>junit-jupiter-engine</artifactId>
                            <version>5.7.0</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <detectOfflineLinks>false</detectOfflineLinks>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.plugins</groupId>
                    <artifactId>nexus-staging-maven-plugin</artifactId>
                    <version>1.6.8</version>
                    <extensions>true</extensions>
                    <configuration>
                        <serverId>ossrh</serverId>
                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.javax0.geci</groupId>
                <artifactId>javageci-api</artifactId>
                <version>1.6.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.geci</groupId>
                <artifactId>javageci-core</artifactId>
                <version>1.6.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.geci</groupId>
                <artifactId>javageci-tools</artifactId>
                <version>1.6.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.geci</groupId>
                <artifactId>javageci-engine</artifactId>
                <version>1.6.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.geci</groupId>
                <artifactId>javageci-annotation</artifactId>
                <version>1.6.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.geci</groupId>
                <artifactId>javageci-core-annotations</artifactId>
                <version>1.6.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.geci</groupId>
                <artifactId>javageci-jamal</artifactId>
                <version>1.6.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.geci</groupId>
                <artifactId>javageci-testengine</artifactId>
                <version>1.6.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.7.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.7.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-engine</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-testsupport</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-snippet</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-io</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-plantuml</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-ruby</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-groovy</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-scriptbasic</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-yaml</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-tools</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-api</artifactId>
                <version>1.7.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.9.1</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>